syntax = "proto3";

package greet_v1;

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string text = 1;
}