syntax = "proto3";

package user_v1;

service UserService {
	rpc ListUser (ListUserRequest) returns (ListUserResponse);
	rpc GetUser (GetUserRequest) returns (GetUserResponse);
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
	string user_id = 1;
	string name = 2;
	int32 birthday = 3;
	string email = 4;
	BloodType blood_type = 5;
	int32 created_at = 6;
	int32 updated_at = 7;
};

enum BloodType {
	BLOOD_TYPE_UNSPECIFIED = 0;
	BLOOD_TYPE_A = 1;
	BLOOD_TYPE_B = 2;
	BLOOD_TYPE_O = 3;
	BLOOD_TYPE_AB = 4;
}
message ListUserRequest {};

message ListUserResponse {
	repeated User users = 1;
}


message GetUserRequest {
	string user_id = 1;
}

message GetUserResponse {
	User user = 1;
}

message CreateUserRequest {
	string name = 1;
	int32 birthday = 2;
	string email = 3;
	BloodType blood_type = 4;
}

message CreateUserResponse {
	string user_id = 1;
}

message UpdateUserRequest {
	string user_id = 1;
	string name = 2;
}

message UpdateUserResponse {
	string message = 1;
}

message DeleteUserRequest {
	string user_id = 1;
}

message DeleteUserResponse {
	string message = 1;
}